--- a/example2_config.ini
+++ b/example2_config.ini
@@ -2,6 +2,7 @@
 
 # The path to the TEMPO(2)-style pulsar parameter file
 par-file=PULSAR08.par
+inj_par=PULSAR08.par
 
 # The name of the detector from which the data comes
 detector=H1
@@ -13,13 +14,15 @@ detector=H1
 # data-file={'H1': 'fine-H1-PULSAR08.txt.gz'}
 # or using the 'data-file-2f' argument to be explicit about the
 # gravitational-wave frequency being two times the rotation frequency
-data-file=fine-H1-PULSAR08.txt.gz
+fake_start=1000000000.0
+fake_end=1000100000.0
+fake_asd=H1
 
 # The output directory for the results (this will be created if it does not exist)
-outdir=example1
+outdir=example2
 
 # A prefix for the results file name
-label=example1
+label=example2
 
 # The Bayesian stochastic sampling algorithm (defaults to dynesty if not given)
 sampler=dynesty
@@ -31,5 +34,4 @@ sampler-kwargs={'Nlive': 1000, 'sample': 'rslice', 'plot': True}
 show-truths = True
 
 # The path to the prior file
-prior=example1_prior.txt
-
+prior=example2_prior.txt
