--- a/example2_config.ini
+++ b/example2_config.ini
@@ -14,9 +14,10 @@ detector=H1
 # data-file={'H1': 'fine-H1-PULSAR08.txt.gz'}
 # or using the 'data-file-2f' argument to be explicit about the
 # gravitational-wave frequency being two times the rotation frequency
-fake_start=1000000000.0
-fake_end=1000100000.0
+fake_start=1000000000
+fake_end=1000100000
 fake_asd=H1
+fake_dt=600
 
 # The output directory for the results (this will be created if it does not exist)
 outdir=example2
