--- a/example2_config.ini
+++ b/example2_config.ini
@@ -1,8 +1,8 @@
 # configuration file for Example 1
 
 # The path to the TEMPO(2)-style pulsar parameter file
-par-file=PULSAR08.par
-inj_par=PULSAR08.par
+par-file=partest.par
+inj_par=partest.par
 
 # The name of the detector from which the data comes
 detector=H1
